Fix some layout issues

--- a/assets/_base.scss
+++ b/assets/_base.scss
@@ -22,6 +22,10 @@ h1, h2, h3, h4 {
   font-weight: 400;
 }
 
+h4 {
+  margin-top: 1.75em;
+}
+
 img, figure, object, video, iframe {
   max-width: 100%;
 }
